# frontier

./: .gitignore  Containerfile.flatpak-cargo  Containerfile.flatpak-node  README.md  flatpak-source-files.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: macos-pnpm.yml  macos.yml  windows-pnpm.yml  windows.yml
_flatpak/: Containerfile.flatpak-node
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  events.rs  lib.rs  main.rs  open.rs  project.rs  render.rs  task.rs
src/lib/: CreateProjectButton.svelte  DevWarning.svelte  LoadProjectButton.svelte  Popup.svelte  PopupOverlay.svelte  ProjectTitle.svelte  commands.ts  events.ts  id.ts  project.ts
src/lib/create-project/: AudioPath.svelte  CreateAndOpenButton.svelte  CreateOnlyButton.svelte  CreateProject.svelte  ProjectPath.svelte  SpatialPath.svelte  create.ts
src/lib/styles/: _xpans.scss
src/lib/task-panel/: AddConfig.svelte  ExportQueue.svelte  ImportQueue.svelte  RenderAllButton.svelte  RenderList.svelte  RenderPath.svelte  SetRenderPathButton.svelte  TaskPanel.svelte  config_mode.ts  task.ts
src/lib/task-panel/task/: Configuration.svelte  RemoveButton.svelte  RenderButton.svelte  Task.svelte
src/lib/task-panel/task/modes/: PanLawSelect.svelte
src/lib/task-panel/task/modes/headphones/: DistanceCurveSelect.svelte  HeadphonesConfig.svelte
src/lib/task-panel/task/status/: CancelButton.svelte  PauseButton.svelte  ProgressBar.svelte  Status.svelte  progress.ts
(+3 files in other folders)
