[package]
name = "frontier"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "frontier_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri-related dependencies
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# Frontier-related dependencies
xpans_taskrenderer = "0.1.0"
xpans_projectfile = "0.1.0"
xpans_xsr = "0.1.0"
xpans_stereo = "0.1.0"
xpans_headphones = "0.1.0"
xpans_renderconfig = "0.1.0"
# xpans_violet = "0.1.0"
rmp-serde = "1.3.0"
toml = "0.9.8"
num = "0.4.3"
pathdiff = "0.2.3"
directories = "6.0.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
